apps/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  selector:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 3001
      targetPort: http
